--- a/css/main.css
+++ b/css/main.css
@@ -43,11 +43,17 @@ html {
     will-change: transform;
     transition: var(--transition) !important;
 }
+
 .slider__item {
     max-height: 75vh;
     overflow: hidden;
     cursor: pointer;
     transition: transform var(--transition), box-shadow var(--transition) !important;
+}
+@media (max-width:950px) {
+    .slider__item{
+       min-width: 44vw!important;
+    }
 }
 .slider__img {
     height: 100%;
